issue #44 skip adder tab on left/right arrows
* added event filter to adjust selection to first/second last tab
  when new selected tab would be the adder tab
* also: minor sonarlint issues